# tp-complexite

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
docs/: .chktexrc  Makefile  README.md  main.tex  metadata.tex  mystyle.sty
docs/scripts/: texify_lint.py
docs/sections/: conclusion.tex  introduction.tex  tp1.tex  tp2.tex  tp3.tex
scripts/: check-latex.sh
tests/: test_tp1_algorithms.py  test_tp2_solver.py  test_tp3_sorting.py  test_utils_benchmarking.py  test_utils_plotting.py
tp1/: benchmark.py  eratosthene.py  fibonacci.py  hanoi.py  main.py
tp2/: __init__.py  benchmark.py  main.py  random_game.py  solver.py
tp3/: __init__.py  benchmark.py  main.py  sorting.py
utils/: __init__.py  benchmarking.py  plotting.py
